# pfn-npe

./: .gitignore  LICENSE  README.md  pyproject.toml
pfn_testing/sbi/: __init__.py  ar1_diagnostic.py  ar_density.py  bayesflow_baseline.py  copula.py  density_estimators.py  generate_datasets.py  generate_plots.py  load_datasets.py  plotting.py  sbi_baselines.py  sbibm_utils.py  tabpfn_npe.py
pfn_testing/sbi/custom_tasks/: __init__.py  ar1_ts_t50.py  demo_ar1_ts_t50.py  distractor_task.py  grid_posterior.py  lotka_volterra_raw.py  ou.py  sir_raw.py  solar_dynamo.py
repro/: check_install.sh  make_tables_and_figures.sh  run_core_10k.sh  run_smoke.sh
scripts/: _tex_table.py  aggregate_c2st_table.py  aggregate_layer_sweep.py  analyze_posterior_variance_cv.py  ar_linear_probes.py  ar_residual_flow.py  blocked_gibbs.py  c2st_decomposition.py  capacity_ablation_table.py  compare_flow_vs_quantile.py  compare_pooling.py  copula_baseline.py  count_modes.py  cross_theta_label_ablation.py  cross_theta_probe.py  encoder_linear_probes.py  filtered_pfn_npe_flow.py  focused_pairwise_copula_slice.py  inspect_embeddings.py  interaction_order_copula_test.py  joint_structure_probe.py  layer_linear_probe.py  layer_quantile_probe.py  learned_gibbs.py  learned_summary_npe_baseline.py  npe_pfn_baseline.py  our_ar_baseline.py  overlay_c2st_probe.py  p17_filter_ablation_table.py  paper_comparison_tables.py  parameter_rotation_test.py  patch_distractor_filter.py  pca_no_pca_table.py  pfn_local_nle_budget_test.py  pfn_proposal_nle_refinement.py  pfn_weighted_fixed_table_nle.py  plot_K_sweep.py  plot_anytime_pareto_appendix_combined.py  plot_anytime_pareto_frontier.py  plot_budget_scaling.py  (+52 more)
