[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfn-npe"
version = "0.1.0"
description = "Research code for PFN-derived summaries in simulation-based inference."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "PFN-NPE authors" },
]
keywords = [
    "simulation-based inference",
    "neural posterior estimation",
    "tabpfn",
    "normalizing flows",
    "research code",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "bayesflow>=2.0.7",
    "emcee>=3.1.6",
    "keras>=3.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.0",
    "pymc>=5.0",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "sbi>=0.23.0",
    "sbibm @ git+https://github.com/epickens/sbibm.git@4e11e97a2699a788bd36e2ad5158a37cfaf41b3a",
    "tabpfn>=6.3.2",
    "torch>=2.3",
    "wandb>=0.17",
    "zuko>=1.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[project.optional-dependencies]
npe-pfn = [
    "npe_pfn @ git+https://github.com/epickens/npe-pfn.git@c59cc5511194d33824fadeb8fee546ceabe0d309",
]

[project.urls]
Homepage = "https://github.com/epickens/pfn-npe"
Repository = "https://github.com/epickens/pfn-npe"
Issues = "https://github.com/epickens/pfn-npe/issues"

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]

[tool.setuptools.packages.find]
include = ["pfn_testing*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
